<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="6dp"
    android:layout_marginRight="6dp"
    android:background="@color/white"
    tools:ignore="ExtraText,RtlHardcoded"
    tools:context=".credentials.CreatePage">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_margin="10dp"
        xmlns:tools="http://schemas.android.com/tools"
        tools:ignore="RedundantNamespace,UselessLeaf" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity = "start"
            android:background="@drawable/circle"
            android:padding="15dp"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/main_logo"
            android:layout_marginLeft="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/lemon"
            android:gravity="center_horizontal"
            android:text="@string/intelligentbuy"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>


    <EditText
        android:id="@+id/first_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:drawableStart="@drawable/baseline_person_24"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="15dp"
        android:hint="@string/first_name"

        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#3E2723"
        android:padding="15sp"/>
    <EditText
        android:id="@+id/last_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints=""
        android:drawableStart="@drawable/baseline_person_24"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="15dp"
        android:hint="@string/last_name"
        android:layout_marginTop="30dp"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#3E2723"
        android:padding="15sp"
        tools:ignore="DuplicateIds" />

<!--    <EditText-->
<!--        android:id="@+id/dob"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:autofillHints=""-->
<!--        android:drawableStart="@drawable/baseline_calendar_month_24"-->
<!--        android:drawableLeft="@drawable/baseline_calendar_month_24"-->
<!--        android:drawablePadding="15dp"-->
<!--        android:hint="Date of Birth"-->
<!--        android:layout_marginTop="30dp"-->

<!--        android:minHeight="48dp"-->
<!--        android:textColor="@color/black"-->
<!--        android:textColorHint="#3E2723"-->
<!--        android:padding="15sp"-->
<!--        tools:ignore="DuplicateIds"-->
<!--        android:clickable="false"-->
<!--        android:cursorVisible="false"-->
<!--        android:focusable="false"-->
<!--        android:focusableInTouchMode="false"-->
<!--        />-->



    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:drawableStart="@drawable/email"
        android:drawablePadding="15dp"
        android:hint="email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#3E2723"
        android:background="@drawable/edit"
        android:padding="15sp"
        tools:ignore="DuplicateIds" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:drawableStart="@drawable/baseline_password_24"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="15dp"
        android:hint="enter password"

        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#3E2723"
        android:background="@drawable/edit"
        android:padding="15sp"/>






    <Button
        android:id="@+id/create_btn"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:autoSizeMaxTextSize="@android:dimen/app_icon_size"
        android:background="@drawable/button"
        android:fontFamily="@font/lemon"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="create account"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="18sp"
        app:backgroundTint="@color/black"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/loginRedirectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="35dp"
        android:text="@string/already_have_an_account_login"
        android:textSize="16sp" />

</LinearLayout>